fixes layout spacing issues

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -92,12 +92,12 @@ h6 {
 }
 
 .content-section-a {
-    padding: 50px 0;
+    padding: 30px 0;
     background-color: #f8f8f8;
 }
 
 .content-section-b {
-    padding: 50px 0;
+    padding: 30px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
 }
@@ -157,6 +157,9 @@ h6 {
     ul.banner-social-buttons > li:last-child {
         margin-bottom: 0;
     }
+}
+#contact h2 {
+    margin-bottom: 0.5em;
 }
 .icon-contact {
     display: inline;
